@startuml

hide methods
left to right direction

class Platform {
  -String designation
}

class Organization {
  -String designation
}

class User {
  -String name
  -String email
  -String password
}

class Collaborator {
  -String name
  -String email
}

class Task {
  -String id
  -String briefDescription
  -Double timeDuration
  -Double costPerHour
  -String category
}

Platform "1" -- "*" Organization : has registered >
Platform "1" -- "*" User : has registered >

Organization "1" -- "1" Collaborator: has >
Organization "1" -- "*" Task : has >

Collaborator "0..1" -- "1" User : act as >
Collaborator "1" -- "*" Task : creates >
@enduml
